chore: force deletion of failed mongo restore job

--- a/helm-chart/templates/configmap/mongo-restore.yaml
+++ b/helm-chart/templates/configmap/mongo-restore.yaml
@@ -7,8 +7,8 @@ metadata:
     deployEnv: {{ .Values.deployEnv | quote }}
     {{- include "sefaria.labels" . | nindent 4 }}
   annotations: 
-    helm.sh/hook: post-delete
-    helm.sh/hook-delete-policy: hook-succeeded
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: hook-succeeded, hook-failed
     helm.sh/hook-weight: "5"
 data: 
   restore-mongo.sh: |-  
