--- a/helm-chart/templates/jobs/mongo-destroy.yaml
+++ b/helm-chart/templates/jobs/mongo-destroy.yaml
@@ -19,7 +19,7 @@ spec:
   template:
     spec:
       containers:
-      - name: mongo-destroy-{{ .Values.deployEnv }}
+      - name: destroy-mongo-{{ .Values.deployEnv }}
         image: mongo:4.4
         env:
           - name: MONGO_HOST
@@ -34,7 +34,7 @@ spec:
       volumes:
       - name: script
         configMap:
-          name: mongo-destroy-{{ .Values.deployEnv }}
+          name: destroy-mongo-{{ .Values.deployEnv }}
           defaultMode: 0755
   ttlSecondsAfterFinished: 432000
 {{- end }}
