--- a/helm-chart/templates/configmap/local-settings.yaml
+++ b/helm-chart/templates/configmap/local-settings.yaml
@@ -19,7 +19,7 @@ data:
   MAINTENANCE_MESSAGE: {{ .Values.localSettings.MAINTENANCE_MESSAGE | quote }}
   GLOBAL_WARNING: "{{ .Values.localSettings.GLOBAL_WARNING }}"
   GLOBAL_WARNING_MESSAGE: {{ .Values.localSettings.GLOBAL_WARNING_MESSAGE | quote }}
-  SITE_PACKAGE: "{{ .Values.localSettings.SITE_PACKAGE | quote }}"
+  SITE_PACKAGE: {{ .Values.localSettings.SITE_PACKAGE | quote }}
   local_settings.py: |-
     from socket import gethostname, gethostbyname
     from datetime import timedelta
