--- a/helm-chart/templates/analysistemplate/rollout-ready.yaml
+++ b/helm-chart/templates/analysistemplate/rollout-ready.yaml
@@ -17,7 +17,7 @@ spec:
               spec:
                 containers:
                   - name: primer
-                    image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
+                    image: "{{ .Values.web.containerImage.imageRegistry }}:{{ .Values.web.containerImage.tag }}"
                     command: [ "/app/build/startup/waitForRollout.bash" ]
                     env:
                       - name: TARGET_HOSTNAME
