fix: database name in selenium test

--- a/.github/workflows/continuous.yaml
+++ b/.github/workflows/continuous.yaml
@@ -244,7 +244,7 @@ jobs:
           SEFARIA_TEST_USER: ${{ secrets.SEFARIA_APP_USER }}
           PYTHONPATH: "."
           DJANGO_SETTINGS_MODULE: sefaria.settings
-          MONGO_DB_NAME: sefaria-${{ steps.get-sha.outputs.sha_short }}
+          MONGO_DB_NAME: sefaria-sandbox-${{ steps.get-sha.outputs.sha_short }}
           GITHUB_SHA_SORT: ${{ steps.get-sha.outputs.sha_short }}
       - name: Authenticate GHA Runner to GCP
         uses: google-github-actions/setup-gcloud@v0
