--- a/.github/workflows/helm-tests.yaml
+++ b/.github/workflows/helm-tests.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.1.0
       - name: Lint chart
-        run: ct lint --charts .
+        run: ct lint --charts helm-chart
