--- a/helm-chart/values.yaml
+++ b/helm-chart/values.yaml
@@ -123,13 +123,13 @@ varnish:
     nuke_limit: "400"
     # Threading
     # http://book.varnish-software.com/4.0/chapters/Tuning.html#details-of-threading-parameters
-    thread_pools: 2 # Default: 2
-    thread_pool_max: 5000 # Default: 5000; should be a function of resources.request.memory
-    thread_pool_min: 100 # Default: 100
+    thread_pools: 2  # Default: 2
+    thread_pool_max: 5000  # Default: 5000; should be a function of resources.request.memory
+    thread_pool_min: 100  # Default: 100
     # Timers
     # http://book.varnish-software.com/4.0/chapters/Tuning.html#timers
-    first_byte_timeout: 90 # Default 60s
-    between_bytes_timeout: 90 # Default 60s
+    first_byte_timeout: 90  # Default 60s
+    between_bytes_timeout: 90  # Default 60s
   secrets:
     varnish:
       # for local testing purposes or CI pipeline use input a value
@@ -208,45 +208,46 @@ secrets:
     # The data keys can be used to override values in the local settings secret.
     # This is intended for local development use and CI, do not use this in
     # production.
-    #data:
-    #  DATABASES_HOST:
-    #  DATABASES_PASS:
-    #  DATABASES_USER:
-    #  DATABASES_PORT:
-    #  GOOGLE_OAUTH2_CLIENT_ID:
-    #  GOOGLE_OAUTH2_CLIENT_SECRET:
-    #  SECRET_KEY:
-    #  MANDRILL_API_KEY:
-    #  SEFARIA_DB:
-    #  SEFARIA_DB_USER:
-    #  SEFARIA_DB_PASSWORD:
-    #  SEARCH_ADMIN_USER:
-    #  SEARCH_ADMIN_PW:
-    #  SEARCH_ADMIN_K8S:
-    #  TURN_SECRET:
-    #  TURN_USER:
-    #  SEFARIA_BOT_API_KEY:
-    #  CLOUDFLARE_ZONE:
-    #  CLOUDFLARE_EMAIL:
-    #  CLOUDFLARE_TOKEN:
-    #  GOOGLE_TAG_MANAGER_CODE:
-    #  GOOGLE_ANALYTICS_CODE:
-    #  GOOGLE_MAPS_API_KEY:
-    #  MIXPANEL_CODE:
-    #  HOTJAR_ID:
-    #  AWS_ACCESS_KEY:
-    #  AWS_SECRET_KEY:
-    #  S3_BUCKET:
-    #  NATIONBUILDER_TOKEN:
-    #  NATIONBUILDER_CLIENT_ID:
-    #  NATIONBUILDER_CLIENT_SECRET:
-    #  MAILCHIMP_API_KEY:
-    #  MAILCHIMP_ANNOUNCE_ID:
-    #  MAILCHIMP_WEBHOOK_KEY:
-    #  RECAPTCHA_PUBLIC_KEY:
-    #  RECAPTCHA_PRIVATE_KEY:
-    #  SIMPLE_JWT_SIGNING_KEY:
-    #  MOBILE_APP_KEY:
+    #
+    # data:
+    #   DATABASES_HOST:
+    #   DATABASES_PASS:
+    #   DATABASES_USER:
+    #   DATABASES_PORT:
+    #   GOOGLE_OAUTH2_CLIENT_ID:
+    #   GOOGLE_OAUTH2_CLIENT_SECRET:
+    #   SECRET_KEY:
+    #   MANDRILL_API_KEY:
+    #   SEFARIA_DB:
+    #   SEFARIA_DB_USER:
+    #   SEFARIA_DB_PASSWORD:
+    #   SEARCH_ADMIN_USER:
+    #   SEARCH_ADMIN_PW:
+    #   SEARCH_ADMIN_K8S:
+    #   TURN_SECRET:
+    #   TURN_USER:
+    #   SEFARIA_BOT_API_KEY:
+    #   CLOUDFLARE_ZONE:
+    #   CLOUDFLARE_EMAIL:
+    #   CLOUDFLARE_TOKEN:
+    #   GOOGLE_TAG_MANAGER_CODE:
+    #   GOOGLE_ANALYTICS_CODE:
+    #   GOOGLE_MAPS_API_KEY:
+    #   MIXPANEL_CODE:
+    #   HOTJAR_ID:
+    #   AWS_ACCESS_KEY:
+    #   AWS_SECRET_KEY:
+    #   S3_BUCKET:
+    #   NATIONBUILDER_TOKEN:
+    #   NATIONBUILDER_CLIENT_ID:
+    #   NATIONBUILDER_CLIENT_SECRET:
+    #   MAILCHIMP_API_KEY:
+    #   MAILCHIMP_ANNOUNCE_ID:
+    #   MAILCHIMP_WEBHOOK_KEY:
+    #   RECAPTCHA_PUBLIC_KEY:
+    #   RECAPTCHA_PRIVATE_KEY:
+    #   SIMPLE_JWT_SIGNING_KEY:
+    #   MOBILE_APP_KEY:
   backupManager:
     # If you're using a reference to an existing secret then the data: section
     # should be commented out and vice-versa.
@@ -262,7 +263,7 @@ secrets:
     # data:
 
 localSettings:
-  DEBUG: False
+  DEBUG: "False"
   DOMAIN_LANGUAGE: {}
     # https://www.sefaria.org: english
     # https://www.sefaria.org.il: hebrew
@@ -271,10 +272,10 @@ localSettings:
   SEARCH_ADMIN: "http://elasticsearch-data:9200"
   TURN_SERVER: ''
   USE_CLOUDFLARE: false
-  FRONT_END_URL: "http://www.sefaria.org" # "http://${ENV_NAME}.sandbox.sefaria.org"
-  OFFLINE: False
-  DOWN_FOR_MAINTENANCE: False
+  FRONT_END_URL: "http://www.sefaria.org"  # Use "http://${ENV_NAME}.sandbox.sefaria.org" in sandboxes and cauldrons
+  OFFLINE: "False"
+  DOWN_FOR_MAINTENANCE: "False"
   MAINTENANCE_MESSAGE: "Sefaria is down for scheduled maintenance. We expect to be back online within 15 minutes. Thank you for your patience."
-  GLOBAL_WARNING: False
+  GLOBAL_WARNING: "False"
   GLOBAL_WARNING_MESSAGE: "Sefaria will be in <b>Read-Only</b> mode for scheduled maintenance from 4:45pm-6:45pm Pacific time. Edits will <b>not</b> be saved during that time."
   SITE_PACKAGE: "sites.sefaria"
