--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "4.x",
     "express-winston": "^4.1.0",
     "extend": "^3.0.0",
+    "findandreplacedomtext": "^0.4.6",
     "humanize-duration": "^3.27.0",
     "is-hotkey": "^0.1.6",
     "jquery": "^2.2.0",
