--- a/helm-chart/templates/configmap/upload-mongo-dumps.yaml
+++ b/helm-chart/templates/configmap/upload-mongo-dumps.yaml
@@ -1,4 +1,4 @@
-{{- if eq .Values.deployEnv "prod" }}
+{{- if .Values.backup.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,48 +9,55 @@ metadata:
 data:
   upload-dumps.sh: |-
     #!/usr/bin/env bash
+    set -x
+    {{- if .Values.backup.serviceAccount }}
+    gloud auth activate
+    {{- else }}
     gcloud auth activate-service-account --key-file ${GOOGLE_APPLICATION_CREDENTIALS}
+    {{- end }}
     cd "/mongodumps/shared_volume"
     today="$(date +'%d.%m.%y')"
     last_week="$(date --date='last week' +'%d.%m.%y')"
 
-    gsutil rm "gs://sefaria-mongo-backup/private_dump_${last_week}.tar.gz"
-    gsutil rm "gs://sefaria-mongo-backup/private_dump_small_${last_week}.tar.gz"
+    gsutil rm "gs://${BUCKET}/${PREFIX}private_dump_${last_week}.tar.gz"
+    gsutil rm "gs://${BUCKET}/${PREFIX}private_dump_small_${last_week}.tar.gz"
 
     if [ -f "private_dump.tar.gz" ]; then
-    echo "uploading private dump"
-    gsutil cp private_dump.tar.gz "gs://sefaria-mongo-backup/private_dump_${today}.tar.gz"
-
-    if [ "$(date +'%d')" == "01" ]; then  #  Upload to Nearline storage on the first of every month
-        echo "Archiving to Nearline Storage"
-        gsutil cp private_dump.tar.gz "gs://sefaria-mongo-archive/private_dump_${today}.tar.gz"
-    fi
+        echo "uploading private dump"
+        gsutil cp private_dump.tar.gz "gs://${BUCKET}/${PREFIX}private_dump_${today}.tar.gz"
+        if [ "$(date +'%d')" == "01" ]; then  #  Upload to Nearline storage on the first of every month
+            echo "Archiving to Nearline Storage"
+            gsutil cp private_dump.tar.gz "gs://${ARCHIVE_BUCKET}/${PREFIX}private_dump_${today}.tar.gz"
+        fi
     else
-    echo "Private dump missing"
-
+        echo "Private dump missing"
     fi
 
     if [ -f "private_dump_small.tar.gz" ]; then
-    echo "uploading private small dump"
-    gsutil cp private_dump_small.tar.gz "gs://sefaria-mongo-backup/private_dump_small_${today}.tar.gz"
+        echo "uploading private small dump"
+        gsutil cp private_dump_small.tar.gz "gs://${BUCKET}/${PREFIX}private_dump_small_${today}.tar.gz"
     else
-    echo "small private dump missing"
+        echo "small private dump missing"
     fi
 
+    {{- if .Values.backup.public }}
+
     if [ -f "dump_small.tar.gz" ]; then
-    echo "uploading small public dump"
-    gsutil cp dump_small.tar.gz gs://sefaria-mongo-backup
-    gsutil acl ch -u AllUsers:R gs://sefaria-mongo-backup/dump_small.tar.gz
+        echo "uploading small public dump"
+        gsutil cp dump_small.tar.gz "gs://${BUCKET}/${PREFIX}dump_small.tar.gz"
+        gsutil acl ch -u AllUsers:R "gs://${BUCKET}/${PREFIX}dump_small.tar.gz"
     else
-    echo "small public dump missing"
+        echo "small public dump missing"
     fi
 
     if [ -f "dump.tar.gz" ]; then
-    echo "Uploading Public Dump"
-    gsutil cp dump.tar.gz gs://sefaria-mongo-backup
-    gsutil acl ch -u AllUsers:R gs://sefaria-mongo-backup/dump.tar.gz
+        echo "Uploading Public Dump"
+        gsutil cp dump.tar.gz "gs://${BUCKET}/${PREFIX}dump.tar.gz"
+        gsutil acl ch -u AllUsers:R "gs://${BUCKET}/${PREFIX}dump.tar.gz"
     else
-    echo "public dump missing"
+        echo "public dump missing"
     fi
-    curl -X POST --data-urlencode 'payload={"channel": "#engineering", "username": "Data Archiver", "text": "The MongoDB store was routinely dumped to cloud storage: '"$(date)"'", "icon_emoji": ":cloud:"}' ${SLACK_URL}
+
+    {{- end }}
+    curl -X POST --data-urlencode 'payload={"channel": "#engineering", "username": "Data Archiver", "text": "The {{ .Values.deployEnv }} MongoDB store was routinely dumped to cloud storage: '"$(date)"'", "icon_emoji": ":cloud:"}' ${SLACK_URL}
 {{- end }}
