ci: make helm test purpose clear in name

--- a/.github/workflows/helm-tests.yaml
+++ b/.github/workflows/helm-tests.yaml
@@ -1,11 +1,13 @@
+name: Helm
+
 on:
   pull_request:
     paths:
       - "helm-chart/**"
 
 jobs:
-  helm-tests:
-    name: "Helm Tests"
+  lint:
+    name: "Lint"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
