--- a/helm-chart/templates/cronjob/mongo-backup.yaml
+++ b/helm-chart/templates/cronjob/mongo-backup.yaml
@@ -19,9 +19,11 @@ spec:
           - name: create-dumps-script
             configMap:
               name: create-dumps-{{ .Values.deployEnv }}
+              defaultMode: 0755
           - name: upload-dumps-script
             configMap:
               name: upload-dumps-{{ .Values.deployEnv }}
+              defaultMode: 0755
           - name: shared-volume
             emptyDir: {}
           affinity:
