--- a/helm-chart/templates/configmap/mongo-restore.yaml
+++ b/helm-chart/templates/configmap/mongo-restore.yaml
@@ -17,5 +17,5 @@ data:
     set -x
 
     tar xzvf /storage/dump.tar.gz -C /storage 
-    mongorestore --drop --host=$MONGO_HOST:27017 -v -d sefaria-{{ .Values.deployEnv }} --dir=/storage/dump/sefaria
+    mongorestore --drop --host=$MONGO_HOST:27017 -v -d "${SEFARIA_DB}-{{ .Values.deployEnv }}" --dir=/storage/dump/sefaria
 {{- end }}
