--- a/helm-chart/templates/cronjob/reindex-elasticsearch.yaml
+++ b/helm-chart/templates/cronjob/reindex-elasticsearch.yaml
@@ -23,14 +23,6 @@ spec:
                     values:
                     - mongo
                 topologyKey: kubernetes.io.hostname
-
-          volumes:
-          - name: local-settings
-            configMap:
-              name: local-settings-{{ .Values.deployEnv }}
-              items:
-                - key: local_settings.py
-                  path: local_settings.py
           containers:
           - name: reindex-elastic-search
             image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
@@ -71,6 +63,13 @@ spec:
               "mkdir -p /log && touch /log/sefaria_book_errors.log && pip install numpy && /app/run /app/scripts/reindex_elasticsearch_cronjob.py"
             ]
           restartPolicy: Never
+          volumes:
+          - name: local-settings
+            configMap:
+              name: local-settings-file-{{ .Values.deployEnv }}
+              items:
+                - key: local_settings.py
+                  path: local_settings.py
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 2
 {{- end }}
