--- a/helm-chart/templates/cronjob/daily-email-notifications.yaml
+++ b/helm-chart/templates/cronjob/daily-email-notifications.yaml
@@ -13,13 +13,6 @@ spec:
       backoffLimit: 1
       template:
         spec:
-          volumes:
-          - name: local-settings
-            configMap:
-              name: local-settings-{{ .Values.deployEnv }}
-              items:
-                - key: local_settings.py
-                  path: local_settings.py
           containers:
           - name: daily-email-notifications
             image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
@@ -50,6 +43,13 @@ spec:
               "/app/run /app/scripts/send_email_notifications.py daily"
             ]
           restartPolicy: Never
+          volumes:
+          - name: local-settings
+            configMap:
+              name: local-settings-file-{{ .Values.deployEnv }}
+              items:
+                - key: local_settings.py
+                  path: local_settings.py
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 2
 {{- end }}
