--- a/helm-chart/templates/cronjob/regenerate-long-cached-data.yaml
+++ b/helm-chart/templates/cronjob/regenerate-long-cached-data.yaml
@@ -13,13 +13,6 @@ spec:
       backoffLimit: 1
       template:
         spec:
-          volumes:
-          - name: local-settings
-            configMap:
-              name: local-settings-{{ .Values.deployEnv }}
-              items:
-                - key: local_settings.py
-                  path: local_settings.py
           containers:
           - name: regenerate
             image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
@@ -50,6 +43,13 @@ spec:
               "/app/run /app/scripts/regenerate_long_cached_data.py --all"
             ]
           restartPolicy: OnFailure
+          volumes:
+          - name: local-settings
+            configMap:
+              name: local-settings-file-{{ .Values.deployEnv }}
+              items:
+                - key: local_settings.py
+                  path: local_settings.py
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 2
 {{- end }}
