ci: refactor helm folder for chart-release tool

--- a/.github/workflows/helm-tests.yaml
+++ b/.github/workflows/helm-tests.yaml
@@ -26,4 +26,4 @@ jobs:
         with:
           version: v3.5.1
       - name: Lint chart
-        run: ct lint --charts helm-chart
+        run: ct lint --charts helm-chart/sefaria-project
