feat: allow nginx specific localsettings

--- a/helm-chart/sefaria-project/templates/rollout/nginx.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/nginx.yaml
@@ -100,6 +100,13 @@ spec:
             {{- else }}
             value: search-{{.Values.deployEnv}}
             {{- end }}
+        envFrom:
+          - configMapRef:
+              name: local-settings-nginx-{{ .Values.deployEnv }}
+              optional: true
+          - secretRef:
+              name: local-settings-nginx-secrets-{{ .Values.deployEnv }}
+              optional: true
       volumes:
         - name:  nginx-conf
           configMap:
