refactor: control SEARCH_HOST via values

--- a/helm-chart/sefaria-project/templates/rollout/nginx.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/nginx.yaml
@@ -88,19 +88,8 @@ spec:
             value: {{ randAlphaNum 8 }}
           - name: VARNISH_HOST
             value: "varnish-{{ .Values.deployEnv }}-{{ .Release.Revision }}"
-          # Eventually delete this conditional by bringing PROD into line
-          # and automatically generating the name, a la "search-{{ .Values.deployEnv }}"
-          # TODO - short term move to values file
           - name: SEARCH_HOST
-            {{- if eq .Values.deployEnv "prod" }}
-            value: elasticsearch-data
-            {{- else if eq .Values.deployEnv "democracy" }}
-            value: search-democracy
-            {{- else if eq .Values.sandbox "true" }}
-            value: elasticsearch-data
-            {{- else }}
-            value: search-{{.Values.deployEnv}}
-            {{- end }}
+            value: "{{ .Values.nginx.SEARCH_HOST }}"
         envFrom:
           - configMapRef:
               name: local-settings-nginx-{{ .Values.deployEnv }}
