--- a/helm-chart/sefaria-project/values.yaml
+++ b/helm-chart/sefaria-project/values.yaml
@@ -196,6 +196,8 @@ nginx:
     imageRegistry: gcr.io/production-deployment/sefaria-asset
     # Commit id of the repo for which the image build has been triggered.
     tag: latest
+  # set to search-democracy for democracy
+  SEARCH_HOST: elasticsearch-data
   # key-pair values to load into nginx pod environment.  Takes precedence over global localsettings
   localsettings:
   # APP: nginx
