refactor: remove explicit environment name check

--- a/helm-chart/sefaria-project/templates/rollout/nodejs.yaml
+++ b/helm-chart/sefaria-project/templates/rollout/nodejs.yaml
@@ -55,9 +55,8 @@ spec:
             value: web-{{ .Values.deployEnv }}-{{ .Release.Revision }}
           - name: DJANGO_PORT
             value: "80"
-          # TODO: this should be in values file
           - name: DEBUG
-            value: {{ if eq .Values.deployEnv "prod" }}"false"{{ else }}"true"{{ end }}
+            value: {{ if eq .Values.sandbox "true" }}"true"{{ else }}"false"{{ end }}
           - name: REDIS_HOST
             value: redis-{{ .Values.deployEnv }}
         envFrom:
