fix: fix bug in robots.txt configmap

--- a/helm-chart/sefaria-project/templates/configmap/robots-txt.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/robots-txt.yaml
@@ -8,7 +8,7 @@ metadata:
 data: 
   robots.txt: |-
     User-agent: *
-{{- eq .Values.sandbox "true" }}
+{{- if eq .Values.sandbox "true" }}
     Disallow: /
 {{- else }}
     Disallow: /activity/
