--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -26,7 +26,23 @@ jobs:
           filters: |
             charts:
               - 'helm-chart/**/*'
-
+  semantic-release:
+    runs-on: ubuntu-latest
+    needs:
+      - changes
+    if: |
+      (github.repository == 'sefaria/sefaria-project') && (needs.changes.outputs.charts == 'true')
+    outputs:
+      release-version: ${{ steps.semantic.outputs.release-version }}
+    steps:
+      - uses: actions/checkout@v3
+      - uses: cycjimmy/semantic-release-action@v3
+        id: semantic
+        with:
+          working_directory: ./helm-chart
+          dry-run: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   chart:
     name: Release Chart
     runs-on: ubuntu-latest
@@ -34,11 +50,12 @@ jobs:
       contents: write # needed to write releases
     needs:
       - changes
+      - semantic-release
     if: |
       (github.repository == 'sefaria/sefaria-project') && (needs.changes.outputs.charts == 'true')
     steps:
       - name: Checkout master
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           # Fetch entire history. Required for chart-releaser; see https://github.com/helm/chart-releaser-action/issues/13#issuecomment-602063896
           fetch-depth: 0
@@ -47,6 +64,18 @@ jobs:
         run: |
           git config --global user.name "$GITHUB_ACTOR"
           git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
+      - name: Get appVersion
+        id: appVersion
+        run: |
+          echo '::set-output name=appVersion::$(git describe --match "v*" --abbrev=0 HEAD --tags)'
+      - name: Download yq
+        run: |
+          wget -nv -nc -O yq https://github.com/mikefarah/yq/releases/download/v4.20.2/yq_linux_amd64
+          chmod +x yq
+      - name: Update chart version
+        run: ./yq -i e '.version = "${{ needs.semantic-release.outputs.release-version }}"' helm-chart/sefaria-project/Chart.yaml
+      - name: Update chart appVersion
+        run: ./yq -i e '.appVersion = "${{ steps.appVersion.outputs.appVersion }}"' helm-chart/sefaria-project/Chart.yaml
       - name: Helm Chart Releaser
         uses: helm/chart-releaser-action@v1.4.0
         env:
