mark all linker tests and avoid running them on pytestpods while they dont have access to linker models

--- a/sefaria/pytest.ini
+++ b/sefaria/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     deep: marks tests as slow
     failing: marks tests as known no passing
+    linker: marks all tests relating to linker v3. linker tests require access to linker ML models so these tests should de deslected in environments that dont have access to these models.
 DJANGO_SETTINGS_MODULE = sefaria.settings
 
 python_files =
