--- a/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
+++ b/helm-chart/sefaria-project/templates/configmap/local-settings-file.yaml
@@ -179,10 +179,9 @@ data:
 
     # Turns off search autocomplete suggestions, which are reinitialized on every server reload
     # which can be annoying for local development.
-    DISABLE_AUTOCOMPLETER = False
-    ENABLE_LINKER = False
+    DISABLE_AUTOCOMPLETER = bool(os.getenv("DISABLE_AUTOCOMPLETER", False))
+    ENABLE_LINKER = bool(os.getenv("ENABLE_LINKER", False))
     PARTNER_GROUP_EMAIL_PATTERN_LOOKUP_FILE = "/school-lookup-data/schools.tsv"
-
 
     MAILCHIMP = True
     MAILCHIMP_API_KEY = os.getenv("MAILCHIMP_API_KEY")
@@ -211,15 +210,9 @@ data:
 
     MOBILE_APP_KEY = os.getenv("MOBILE_APP_KEY")
 
-    RAW_REF_MODEL_BY_LANG_FILEPATH = {
-        "en": None,
-        "he": None
-    }
+    RAW_REF_MODEL_BY_LANG_FILEPATH = json.loads(os.getenv("RAW_REF_MODEL_BY_LANG_FILEPATH", '{ "en": None, "he": None }'))
 
-    RAW_REF_PART_MODEL_BY_LANG_FILEPATH = {
-        "en": None,
-        "he": None
-    }
+    RAW_REF_PART_MODEL_BY_LANG_FILEPATH = json.loads(os.getenv("RAW_REF_PART_MODEL_BY_LANG_FILEPATH", '{ "en": None, "he": None }'))
 
     LOGGING = {
         'version': 1,
