--- a/helm-chart/sefaria-project/templates/cronjob/metrics.yaml
+++ b/helm-chart/sefaria-project/templates/cronjob/metrics.yaml
@@ -13,6 +13,7 @@ spec:
       backoffLimit: 1
       template:
         spec:
+          containers:
           - name: metrics
             image: "{{ .Values.web.containerImage }}:{{ .Values.releaseImageTag }}"
             env:
