--- a/.github/workflows/production-deploy.yaml
+++ b/.github/workflows/production-deploy.yaml
@@ -1,3 +1,5 @@
+name: Deploy Production
+
 on:
   push:
     tags:
@@ -53,6 +55,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   build-asset:
     runs-on: ubuntu-latest
+    needs:
+      - build-generic
     steps:
       - uses: actions/checkout@v2
       - name: Set up QEMU
